feat: changed database to MySQL using Docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,21 @@
 spring.application.name=login-auth-api
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
-api.security.token.secret=my-secret-key
+# Configuracao do DataSource
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/agrix-c?createDatabaseIfNotExist=true}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Configuracao do Hibernate
+spring.jpa.hibernate.ddl-auto=update
+
+# Configuracao da JPA - Habilita Log na execucao de SQL
+spring.jpa.show-sql=true
+
+api.security.token.secret=${JWT_SECRET:meusegredosecreto}
+
+spring.h2.console.enabled=true
+# Configuracao de detalhamento de Logging na execucao de SQL
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
